# parameter-golf

./: .gitignore  AGENTS.md  AUTORESEARCH_PROGRAM.md  README.md  debug_train_gpt_memory.py  main.py  mini_run.sh  pyproject.toml  smoke_test.sh  train_gpt.py  train_gpt_mlx.py
